--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.security.user.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/felvasarlasdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=paradox
 spring.jpa.database=mysql
