--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>hu.sandorkonya</groupId>
 	<artifactId>felvasarlasdb</artifactId>
-	<version>1.0</version>
+	<version>1.1</version>
 	<name>felvasarlasdb</name>
 	<description>Növényfelvásárlás adatbázis</description>
 
@@ -51,6 +51,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.6</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
